--- a/cliente/views/main.html
+++ b/cliente/views/main.html
@@ -8,11 +8,11 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
 	<script src="cliente/src/clienteCom.js"></script>
     <script src="cliente/src/clienteRest.js"></script>
-    <script src="cliente/src/webController.js"></script>
+    <!-- <script src="cliente/src/webController.js"></script> -->
+    <script src="cliente/src/controllers/mainController.js"></script>    
     <script src="cliente/src/racesCodeData.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>    
-	<script src="./src/modelo.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>    
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 </head>
 
@@ -20,11 +20,14 @@
     <script>
         rest = new ClienteRest();
         com  = new ClienteCom();
+        if ( !localStorage.user ) {
+            location.href="/";
+        }
     </script>
     <div id="content" class="container-fluid">
-        <div class="col-ms-12">
+        <div class="col-md-12">
             <div class="row main-title">
-                <h1>Menú principal</h1>
+                <h1 id="name"></h1>
             </div>
         </div>
         <div class="col-md-4">
@@ -32,25 +35,28 @@
                 <br>
                 <span style="text-align: left">Experiencia</span>
                 <div class="progress-box">
-                    <span></span>
+                    <span id="experience"></span>
                 </div>
                 <br>
                 <br>
                 <span style="text-align: left">Diplomas</span>
                 <br>
-                <div id="diplomas">11</div>
+                <div id="diplomas"></div>
             </div>
         </div>
         <div class="col-md-4" style="text-align: center; padding-left: 20px">
-            <div id="#profile-container" style="padding-bottom: 40px;">
-                <img id="profile" style="height: 400px;" src="cliente/img/profiles/yopuka.png">
+            <div id="#fighter-stats">
+                <div class="stats-deck">
+                    <span id="life"   class="stat-icon heart"></span>
+                    <span id="damage" class="stat-icon power"></span>
+                </div>
+            </div>
+            <div id="#profile-container" style="padding-bottom: 10px;">
+                <img id="profile" style="height: 400px;">
             </div>
             <div class="fighters-deck">
-                <button class="icon yopuka"    onClick="select('yopuka')"></button>
-                <button class="icon feca"      onClick="select('feca')"></button>
-                <button class="icon aniripsa"  onClick="select('aniripsa')"></button>
-                <button class="icon sadida"    onClick="select('sadida')"></button>
             </div>
+            <div class="error-box"></div>
         </div>
         <div class="col-md-4">
             <div class="friends-list-container">
@@ -96,11 +102,7 @@
                 </table>
             </div>
         </div>
-
-        <div class="col-md-12" style="text-align: center">
-            
-        </div>
-            
-    </div>    
+    </div>
+    <script src="cliente/src/controllers/mainController.js"></script>    
 </body>
 </html>
