--- a/cliente/views/main.html
+++ b/cliente/views/main.html
@@ -33,18 +33,18 @@
         <div class="col-md-4">
             <div id="stats-container" style="text-align: center">
                 <br>
-                <span style="text-align: left">Experiencia</span>
+                <span>Experiencia</span>
                 <div class="progress-box">
                     <span id="experience"></span>
                 </div>
                 <br>
                 <br>
-                <span style="text-align: left">Diplomas</span>
+                <span>Diplomas</span>
                 <br>
                 <div id="diplomas"></div>
             </div>
         </div>
-        <div class="col-md-4" style="text-align: center; padding-left: 20px">
+        <div class="col-md-4" style="text-align: center;">
             <div id="#fighter-stats">
                 <div class="stats-deck">
                     <span id="life"   class="stat-icon heart"></span>
