--- a/cliente/views/selection.html
+++ b/cliente/views/selection.html
@@ -19,6 +19,10 @@
 
 <body>
     <script>
+        if ( !localStorage.getItem("user-to-sign") ) {
+            location.href="/";
+        }
+
         rest = new ClienteRest();
         com  = new ClienteCom();
     </script>
