--- a/cliente/styles/main.css
+++ b/cliente/styles/main.css
@@ -56,7 +56,6 @@ html, body {
 }
 
 .friends-list-container {
-    max-width: 400px;
     background: url(../img/selection/bg-form.png) center center no-repeat transparent;
     background-size: 100% 85%;
     padding: 60px 60px 80px;
@@ -212,6 +211,7 @@ tr:nth-child(even) {
 }
 .locked {
     background-image: url(../img/icons/locked.png);
+    height: 52px;
     box-shadow: inset 0 5px 5px rgb(0, 0, 0, 0.8);
 }
 
@@ -264,4 +264,99 @@ tr:nth-child(even) {
 
 .power {
     background-image: url(../img/selection/picto-war.png);
+}
+
+.close-button {
+    background: url(../img/close-btn.png) center center no-repeat transparent;
+    font-family: Birch;
+    background-size: 95% auto;
+    width: 180px;
+    height: 90px;
+    font-size: 25px;
+    text-align: center;
+    justify-content: center;
+    padding-top: 12px;
+    color: black;
+    line-height: 20px;
+    transition: all .1s;
+    font-weight: 700;
+    border: 0;
+    margin-top: 5px;
+}
+
+.close-button:hover {
+    background: url(../img/close-btn-over.png) center center no-repeat transparent;
+    background-size: 100%;
+    font-size: 30px;
+    color: rgb(40, 40, 40);
+    transition: all .1s;
+    line-height: 27px;
+}
+
+#alert-background {
+    position: absolute;
+    top: 0;
+    background: black;
+    min-height: 100%;
+    min-width: 100%;
+    z-index: 1;
+    opacity: 0.8;
+}
+
+#alert-container{
+    max-width: 600px;
+    min-width: 600px;
+    min-height: 500px;
+    background: url(../img/selection/bg-description.png) center center no-repeat transparent;
+    background-size: 100% 100%;
+    color: white;
+    padding: 140px 120px;
+    padding-bottom: 110px;
+    z-index: 2;
+    position: relative;
+    margin: auto;
+    margin-top: 150px;
+    max-width: 400px;
+    text-align: center;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+.visible {
+    visibility: visible;
+}
+
+.alert-title {
+    margin-top: 80px;
+    font-size: 40px;
+    font-family: Birch;
+    text-align: center;
+    color: white;
+}
+
+.play-button {
+    background: url(../img/btn-play1.png) center center no-repeat transparent;
+    font-family: Birch;
+    background-size: 95% auto;
+    width: 230px;
+    height: 111px;
+    font-size: 30px;
+    text-align: center;
+    justify-content: center;
+    padding-top: 12px;
+    color: #2f2f25;
+    line-height: 20px;
+    transition: all .1s;
+    font-weight: 700;
+    border: 0;
+}
+
+.play-button:hover {
+    background: url(../img/btn-play1-over.png) center center no-repeat transparent;
+    background-size: 100%;
+    font-size: 40px;
+    transition: all .1s;
+    line-height: 27px;
 }
