Añadido efecto de elevación en el deck de luchadores (selección y main)

--- a/cliente/views/main.html
+++ b/cliente/views/main.html
@@ -33,6 +33,9 @@
         <h1 class="alert-title"></h1>
         <button class="play-button" onclick="hideAlert()">Aceptar</button>
     </div>
+    <did id="add-friend-dialog alert-container">
+        <h1>Hola!</h1>
+    </did>
     <div id="alert-background" class="container-fluid hidden"></div>
     <div id="content" class="container-fluid" style="position: absolute; top: 0;">
         <div class="col-md-12">
@@ -72,6 +75,7 @@
         <div class="col-md-4">
             <div class="friends-list-container">
                 <h3>Amigos</h3>
+                <button class="add-friend-button">+</button>
                 <table class="table">
                     <thead>
                         <tr>
