--- a/cliente/styles/main.css
+++ b/cliente/styles/main.css
@@ -181,9 +181,16 @@ tr:nth-child(even) {
     position: relative;
     text-decoration: none;
     width: 54px;
-    border-radius: 10px;
+    border-radius: 15px;
+    box-shadow: inset 0 3px 5px black;
+    transition: all .1s;
+}
+
+.icon:hover {
+    background-size: 110%;
     box-shadow: 0 5px 10px black;
 }
+
 
 .yopuka {
     background-image: url(../img/icons/yopuka.png);
@@ -359,4 +366,34 @@ tr:nth-child(even) {
     font-size: 40px;
     transition: all .1s;
     line-height: 27px;
+}
+
+.add-friend-button {
+    float: right; 
+    margin-top: -70px;
+    background: url(../img/main/plus-background.png) center center no-repeat transparent;
+    background-size: 95% auto;
+    width: 75px;
+    height: 75px;
+    font-size: 30px;
+    text-align: center;
+    justify-content: center;
+    padding-bottom: 6px;
+    color: #2f2f25;
+    line-height: 20px;
+    transition: all .1s;
+    font-weight: 700;
+    border: 0;
+    color: rgb(245, 245, 245);
+    text-shadow: 0 2px 4px rgb(53, 53, 53), 
+        0 -2px 4px rgb(53, 53, 53), 
+        2px  0 4px rgb(53, 53, 53), 
+        -2px 0 4px rgb(53, 53, 53);
+}
+
+.add-friend-button:hover {
+    background-size: 108%;
+    font-size: 40px;
+    transition: all .1s;
+    color: white;
 }
