--- a/cliente/styles/selection.css
+++ b/cliente/styles/selection.css
@@ -87,7 +87,13 @@
     position: relative;
     text-decoration: none;
     width: 54px;
-    border-radius: 10px;
+    border-radius: 15px;
+    box-shadow: inset 0 3px 5px black;
+    transition: all .1s;
+}
+
+.icon:hover {
+    background-size: 110%;
     box-shadow: 0 5px 10px black;
 }
 
