--- a/cliente/views/login.html
+++ b/cliente/views/login.html
@@ -26,7 +26,10 @@
         com  = new ClienteCom();
 
         if ( localStorage.user ) {
-            location.href="/main";
+            var localUsr = JSON.parse(localStorage.user);
+            var email = localUsr.email;
+            var password = localUsr.password;
+            autoLogin(email, password);
         }
     </script>
 
