Un usuario puede desafiar a otro y ambos son derivados a la página /fight con los datos necesarios en el localStorage

--- a/cliente/views/fight.html
+++ b/cliente/views/fight.html
@@ -11,18 +11,12 @@
     
 	<script src="cliente/src/clienteCom.js"></script>
     <script src="cliente/src/clienteRest.js"></script>
-    <script src="cliente/src/controllers/mainController.js"></script>    
-    <script src="cliente/src/controllers/loginController.js"></script>    
-    <script src="cliente/src/controllers/errorController.js"></script>    
+    <!-- <script src="cliente/src/controllers/fightController.js"></script> -->
     <script src="cliente/src/racesCodeData.js"></script>
 </head>
 <body>
     <h1 id="enemyName"></h1>
     <script>
-        var user  = JSON.parse(localStorage.user);
-        //var enemy = JSON.parse(localStorage.enemy);
-        $(document).ready(function() {
-            $('#enemyName').text(`${user}`);
-        })
+        
     </script>
 </body>
