--- a/cliente/styles/fight.css
+++ b/cliente/styles/fight.css
@@ -27,6 +27,34 @@ html, body {
 td, tr {
     border: 1px solid black;
     border-collapse: collapse;
+    width: 60px;
+    height: 60px;
+}
+
+.damage {
+    color: red;
+    text-shadow: 0 4px 8px black;
+    font-size: 30px;
+    text-align: center;
+    vertical-align: middle;
+    font-weight: bold;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.37);
+    border-radius: 15px;
+}
+
+.heal {
+    color: rgb(17, 190, 17);
+    text-shadow: 0 4px 8px black;
+    font-size: 30px;
+    text-align: center;
+    vertical-align: middle;
+    font-weight: bold;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.37);
+    border-radius: 15px;
 }
 
 .icon {
@@ -95,8 +123,8 @@ td, tr {
 /* TOOLTIPING FOR LIVE */
 td .tooltiptext {
   visibility: hidden;
-  width: 120px;
-  background-color: #555;
+  width: 140px;
+  background-color: rgba(56, 56, 56, 0.8);
   color: #fff;
   text-align: center;
   border-radius: 6px;
@@ -105,9 +133,11 @@ td .tooltiptext {
   z-index: 1;
   bottom: 125%;
   left: 50%;
-  margin-left: -60px;
+  margin-left: -70px;
   opacity: 0;
   transition: opacity 0.3s;
+  box-shadow: 0 2px 10px black;
+  font-size: 20px;
 }
 
 .icon .tooltiptext::after {
