--- a/cliente/views/fight.html
+++ b/cliente/views/fight.html
@@ -21,9 +21,18 @@
             location.href="/main";
         }
     </script>
+    <div class="container-fluid" style="position: absolute; top: 0; vertical-align: middle">
+        <div id="alert-container" class="">
+            <h1 class="alert-title"></h1>
+            <button id="alertButton" class="play-button" type="submit">Aceptar</button>
+        </div>
+    </div>
     <div class="container-fluid" style="position: absolute; top: 0;">
+        <div id="alert-background" class="container-fluid"></div>
         <table id="arena">
         </table>
-    </div>
-    
+        <div style="width: 100%; text-align: right">
+            <button id="turn-button" class="no-turn-button"></button>
+        </div>
+    </div>    
 </body>
