--- a/cliente/views/fight.html
+++ b/cliente/views/fight.html
@@ -21,14 +21,14 @@
             location.href="/main";
         }
     </script>
-    <div class="container-fluid" style="position: absolute; top: 0; vertical-align: middle">
-        <div id="alert-container" class="">
+    <div id="alert-fluid-container" class="container-fluid hidden" style="position: absolute; top: 0; vertical-align: middle">
+        <div id="alert-container">
             <h1 class="alert-title"></h1>
             <button id="alertButton" class="play-button" type="submit">Aceptar</button>
         </div>
     </div>
     <div class="container-fluid" style="position: absolute; top: 0;">
-        <div id="alert-background" class="container-fluid"></div>
+        <div id="alert-background" class="container-fluid hidden"></div>
         <table id="arena">
         </table>
         <div style="width: 100%; text-align: right">
