--- a/cliente/views/main.html
+++ b/cliente/views/main.html
@@ -5,10 +5,12 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">    
     <link rel="stylesheet" href="cliente/styles/main.css">
+    <link rel="stylesheet" href="cliente/styles/pace.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.js"></script>
     
 	<script src="cliente/src/clienteCom.js"></script>
     <script src="cliente/src/clienteRest.js"></script>
@@ -94,7 +96,6 @@
                 </table>
             </div>
         </div>
-    </div>
-    <script src="cliente/src/controllers/mainController.js"></script>    
+    </div> 
 </body>
 </html>
