--- a/cliente/views/main.html
+++ b/cliente/views/main.html
@@ -49,6 +49,7 @@
     </div>
     <div id="alert-container" class="hidden">
         <h1 class="alert-title"></h1>
+        <h2 class="alert-player"></h2>
         <button id="alertButton" class="play-button" onclick="hideAlert()">Aceptar</button>
     </div>
     <div id="alert-background" class="container-fluid hidden" onclick="hideAlert()"></div>
